Add 1 to handleWidth in partresize widget.

This used to be set to 0 and recently, this broke ability to drag-resize partitions.

BUG: 499064